# STM32F407ZGT6-Telescope-2026

./: .gitignore  CMakeLists.txt  README.md  Telescope.ioc
Core/Inc/: FreeRTOSConfig.h  bh1750.h  bluetooth.h  bmp280.h  cameratask.h  eeprom.h  flash.h  font.h  getdata.h  hc_sr04.h  image.h  main.h  sht30.h  sram.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tftlcd.h  ui.h  usart.h  usart2task.h  usart3task.h  zigbee.h
Core/Src/: adc.c  bh1750.c  bluetooth.c  bmp280.c  cameratask.c  can.c  dcmi.c  dma.c  eeprom.c  flash.c  freertos.c  getdata.c  gpio.c  hc_sr04.c  i2c.c  iwdg.c  main.c  rtc.c  sht30.c  spi.c  sram.c  stm32f4xx_it.c  tftlcd.c  ui.c  usart.c  usart2task.c  usart3task.c  zigbee.c
cmake/stm32cubemx/: CMakeLists.txt
